--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/mobile.css">
+  <link rel="stylesheet" href="/css/desktop.css" media="(min-width: 900px)">
   <title>Frontend Mentor | News homepage</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -24,7 +25,8 @@
   <main>
     <section class="hero">
       <div class="container hero-container">
-        <img src="/assets/images/image-web-3-mobile.jpg" alt="Web image">
+        <img src="/assets/images/image-web-3-mobile.jpg" alt="Web image" class="mobile-image">
+        <img src="/assets/images/image-web-3-desktop.jpg" alt="Web image" class="desktop-image">
         <div class="hero-content">
           <h1 class="hero-content__title">The Bright Future of Web 3.0?</h1>
           <div>
