--- a/index.html
+++ b/index.html
@@ -17,11 +17,22 @@
   </style>
 </head>
 <body>
-  <!-- Home
-  New
-  Popular
-  Trending
-  Categories -->
+  <header>
+    <div class="container nav-container">
+      <img src="/assets/images/logo.svg" alt="" class="logo">
+      <span class="menu-icon" id="menuIcon"></span>
+      <nav class="nav-menu" id="navMenu">
+        <span class="menu-icon-close" id="menuIconClose"></span>
+        <ul class="nav-menu-list">
+          <li class="nav-menu--link"><a href="#">Home</a></li>
+          <li class="nav-menu--link"><a href="#">New</a></li>
+          <li class="nav-menu--link"><a href="#">Popular</a></li>
+          <li class="nav-menu--link"><a href="#">Trending</a></li>
+          <li class="nav-menu--link"><a href="#">Categories</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   <main>
     <section class="hero">
       <div class="container hero-container">
@@ -86,5 +97,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Sgt.Garro</a>.
   </div>
+  <script src="/js/main.js"></script>
 </body>
 </html>
