--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/mobile.css">
-  <link rel="stylesheet" href="/css/desktop.css" media="(min-width: 900px)">
+  <link rel="stylesheet" href="./css/mobile.css">
+  <link rel="stylesheet" href="./css/desktop.css" media="(min-width: 900px)">
   <title>Frontend Mentor | News homepage</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -19,7 +19,7 @@
 <body>
   <header>
     <div class="container nav-container">
-      <img src="/assets/images/logo.svg" alt="" class="logo">
+      <img src="./assets/images/logo.svg" alt="" class="logo">
       <span class="menu-icon" id="menuIcon"></span>
       <nav class="nav-menu" id="navMenu">
         <span class="menu-icon-close" id="menuIconClose"></span>
@@ -36,8 +36,8 @@
   <main>
     <section class="hero">
       <div class="container hero-container">
-        <img src="/assets/images/image-web-3-mobile.jpg" alt="Web image" class="mobile-image">
-        <img src="/assets/images/image-web-3-desktop.jpg" alt="Web image" class="desktop-image">
+        <img src="./assets/images/image-web-3-mobile.jpg" alt="Web image" class="mobile-image">
+        <img src="./assets/images/image-web-3-desktop.jpg" alt="Web image" class="desktop-image">
         <div class="hero-content">
           <h1 class="hero-content__title">The Bright Future of Web 3.0?</h1>
           <div>
@@ -67,7 +67,7 @@
     <section class="articles">
       <div class="container articles-container">
         <article>
-          <img src="/assets/images/image-retro-pcs.jpg" alt="Retro PCs">
+          <img src="./assets/images/image-retro-pcs.jpg" alt="Retro PCs">
           <div class="article-content">
             <h2 class="article-content__number">01</h2>
             <h4 class="article-content__title">Reviving Retro PCs</h4>
@@ -75,7 +75,7 @@
           </div>
         </article>
         <article>
-          <img src="/assets/images/image-top-laptops.jpg" alt="Top Laptops">
+          <img src="./assets/images/image-top-laptops.jpg" alt="Top Laptops">
           <div class="article-content">
             <h2 class="article-content__number">02</h2>
             <h4 class="article-content__title">Top 10 Laptops of 2022</h4>
@@ -97,6 +97,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Sgt.Garro</a>.
   </div>
-  <script src="/js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
