--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/desktop.css" media="(min-width: 900px)">
   <title>Frontend Mentor | News homepage</title>
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; margin-top: 100px; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -95,7 +95,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Sgt.Garro</a>.
+    Coded by <a href="https://github.com/SgtGarro">Sgt.Garro</a>.
   </div>
   <script src="js/main.js"></script>
 </body>
